<resources>
    <string name="app_name">Tracker</string>
    <string name="send_location_string">Send Locations</string>
    <string name="stop_task_string">Stop Tracking</string>
    <string name="json_view_string">User as Json</string>
    <string name="start_task_string">Start Tracking</string>
    <string name="save_user_string">Save</string>
    <string name="text_view_string">Introduceti numarul de telefon</string>
    <string name="edit_text_hint">+373 *******</string>
</resources>