<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gray"
    android:backgroundTint="@color/white"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_view_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/text_view_string" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_hint"
        android:ems="10"
        android:inputType="phone"
        android:autofillHints="phone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_user_string" />

</LinearLayout>